[package]
name = "srb2launcher_r"
version = "0.1.0"
authors = ["516M <thingstuffet@gmail.com>"]
edition = "2018"

[dependencies]
futures = "*"
tokio = { version = "0.2", features = ["full"] }
reqwest = "*"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = { version = "1.0", optional = true }